--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(TrafficRouting)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+add_subdirectory(Libs)
+
 set(SOURCE_FILES main.cpp)
 add_executable(TrafficRouting ${SOURCE_FILES})
+target_link_libraries(TrafficRouting MapReader)
